# SKN23-3rd-2TEAM

./: .gitignore  README.md  pyproject.toml
app/core/: security.py
app/infrastructure/aws/: bedrock_client.py  opensearch_client.py  rds_pgvector_client.py  s3_client.py
infra/cdk/: README.md
infra/terraform/: README.md
tests/: llama_parser.py  test_rag.py  vector_store.py  visualize_db.py
